# graphcal-py

./: .gitignore  DESIGN.md  LICENSE  README.md  pyproject.toml
examples/: orbital_transfer.expected.json  orbital_transfer.gcl
src/graphcal/: __init__.py  cli.py  errors.py  overrides.py  project.py  result.py
tests/: test_cli.py  test_e2e_examples.py  test_overrides.py  test_project.py  test_result.py
