[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "graphcal-py"
version = "0.1.0"
description = "Typed subprocess wrapper for the graphcal CLI"
requires-python = ">=3.10"
license = { text = "MIT" }

[tool.hatch.build.targets.wheel]
packages = ["src/graphcal"]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
